# USV-Dashboard

./: .gitignore  CMakeLists.txt  README.md  toolchain-mingw.cmake
build-win/: CMakeCache.txt  Makefile  cmake_install.cmake
build-win/.qt/: .qmlls.build.ini.part  QtDeploySupport.cmake  QtDeployTargets.cmake  app_qml.cmake  app_res.cmake
build-win/.qt/deploy_qml_imports/: app.cmake
build-win/.qt/qml_imports/: app_build.rsp  app_conf.rsp
build-win/.qt/rcc/: app_raw_qml_0.qrc  qmake_Dashboard.qrc
build-win/.rcc/qmlcache/: all_aotstats.aotstatslist  app_qml_loader_file_list.rsp  module_app.aotstatslist
build-win/.rcc/qmllint/: app.rsp  app_json.rsp  app_module.rsp
build-win/Dashboard/: app_qml_module_dir_map.qrc  qmldir
logs/: telemetry_20260514_071329.csv  telemetry_20260514_071409.csv  telemetry_20260514_071822.csv  telemetry_20260514_092729.csv  telemetry_20260514_121511.csv
qml/: Main.qml
qml/Dashboard/: Main.qml
qml/Dashboard/components/: AdvancedCompass.qml  CompassWidget.qml  PanelFrame.qml  SectionTitle.qml  SensorCell.qml  StatCard.qml  StatusIndicator.qml  TelemetryValue.qml
qml/Dashboard/panels/: OperationsPanel.qml  OrientationPanel.qml  SensorMatrixPanel.qml  TopBar.qml  TopControlBar.qml  VisualizationPanel.qml  WatchdogPanel.qml
qml/Dashboard/theme/: Theme.qml
src/: main.cpp  telemetry_provider.cpp  telemetry_provider.h
src/logger/: csv_logger.cpp  csv_logger.h  event_logger.cpp  event_logger.h  system_logger.cpp  system_logger.h
src/models/: depth_model.cpp  depth_model.h  power_model.cpp  power_model.h  telemetry_model.cpp  telemetry_model.h  telemetry_packet.h  telemetry_parser.cpp  telemetry_parser.h  telemetry_provider.cpp  telemetry_provider.h
src/runtime/: calibration_controller.cpp  calibration_controller.h  dashboard_runtime.cpp  dashboard_runtime.h
src/serial/: serial_reader.cpp  serial_reader.h
src/visualization/: VesselItem.cpp  VesselItem.h  VesselRenderer.cpp  VesselRenderer.h
src/widgets/: Vessel3DWidget.cpp  Vessel3DWidget.h
